--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "start": "set NODE_ENV=production && node server.js",
     "devstart": "node server.js dev",
-    "test": "mocha tests.js"
+    "test": "mocha test/tests.js"
   },
   "devDependencies": {
     "mocha": "^3.4.2",
